# gando

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py  tox.ini
src/gando/admin/: __init__.py  user_agent_device.py
src/gando/admin/models/: __init__.py  base.py
src/gando/apis/: __init__.py  base.py
src/gando/architectures/apis/: __base.py
src/gando/auth/: __init__.py  base.py
src/gando/auth/middlewares/: __init__.py  base.py
src/gando/config/: __init__.py  base.py
src/gando/http/responses/: json_response.py
src/gando/interfaces/: __init__.py  base.py
src/gando/management/commands/: startapi.py  startinterface.py  startmodel.py  startservice.py
src/gando/middlewares/: global_state.py
src/gando/migrations/: 0001_initial.py
src/gando/models/: __init__.py  abstract_base_model_class.py  abstract_model_class.py  abstract_soft_delete.py  base.py
src/gando/models/fields/: __init__.py  base.py
src/gando/models/serializers/: __init__.py  base.py
src/gando/schemas/: __init__.py
src/gando/serializers/: base.py
src/gando/services/: __init__.py  creator.py  database_manager.py  getter.py  getter_creator.py  updater.py
tests/: settings.py  test_abstract_base_model.py  test_api_base.py  test_blur_base64_field.py  test_casing.py  test_deep_dict.py  test_getter_service.py  test_hashers.py  test_http_response.py  test_json_encoder.py  test_management_commands.py  test_models_base.py  test_query_dict_serializer.py  test_request_updater.py  test_small_blur_base64.py  test_validators.py  test_verbose_name.py
tests/testapp/: __init__.py  models.py
(+55 files in other folders)
