[metadata]
version = attr: gando.__version__
license_files = LICENSE

[tool:pytest]
# ``src`` puts the importable ``gando`` package on the path (src layout);
# ``.`` makes ``tests.settings`` importable as the Django settings module.
pythonpath = src .
DJANGO_SETTINGS_MODULE = tests.settings
python_files = test_*.py
testpaths = tests
